--- a/mr_beep_math.css
+++ b/mr_beep_math.css
@@ -167,8 +167,34 @@ button:focus {
 }
 
 .col-3 {
+  display: flex;
+  /*flex-grow: 1;*/
+  flex-direction: column;
   background: rgb(170, 25, 25);
-  width: 160px;
+  width: 20%;
+  justify-content: space-around;
+}
+
+.numX, .numY {
+  display: flex;
+  align-content: center;
+  flex: 0 1 1;
+  padding: 5px;
+  /*flex: 1;*/
+  /*flex-direction: column;*/
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.head {
+  height: 8%;
+  max-width: 50%;
+}
+
+.circle {
+  height: 8%;
+  border-radius: 50%
+  backcground-color: blue;
 }
 
 footer {
@@ -219,7 +245,13 @@ footer {
   }
 
   .col-3 {
-    display: none;
+    flex-direction: row;
+    flex-grow: 1;
+    align-items: flex-start;
+  }
+
+  .numX, .numY {
+    flex-direction: column;
   }
 
   .question {
